  * Remove config.h.in from AUTOGEN_FILES, since autoheader doesn't
    necessarily update it.
  * Remove conf/gcry.mk from AUTOGEN_FILES, and conf/gcry.rmk from their
    dependencies.  autogen.sh runs util/import_gcry.py after autoconf et al,
    so conf/gcry.rmk's timestamp will be later than some of the
    autogenerated outputs.

 -- Colin Watson <cjwatson@debian.org>  Tue, 01 Jun 2010 15:54:54 +0100

grub2 (1.98+20100527-2) unstable; urgency=low

  * Always override statically-linked-binary Lintian tag for kernel.img;
    dynamic linking makes no sense here.
  * kernel.img is stripped upstream where it can be, but override Lintian's
    error for the cases where it can't.
  * Override binary-from-other-architecture for kernel.img as well as *.mod
    when building grub-efi-amd64 on i386.

 -- Colin Watson <cjwatson@debian.org>  Tue, 01 Jun 2010 13:48:14 +0100

grub2 (1.98+20100527-1) unstable; urgency=low

  * New Bazaar snapshot.
    - Support multiple terminals in grub-mkconfig, e.g.
      GRUB_TERMINAL='serial console' (closes: #506707).
    - Speed up consecutive hostdisk operations on the same device (closes:
      #508834, #574088).
    - Fix grammar error in grub-setup warning (closes: #559005).
    - Use xorriso for image creation rather than embedding a modified copy
      of mkisofs (closes: #570156).
    - Issue an error rather than segfaulting if only some LVM component
      devices are in device.map (closes: #577808).
    - Fix typo in make_device_name which caused grub-probe problems on
      systems with BSD disk labels (closes: #578201).
    - Add DM-RAID probe support (closes: #579919).
    - Include all gnumach kernels on Hurd, not just gnumach and gnumach.gz
      (closes: #581584).

  [ Colin Watson ]
  * Restore TEXTDOMAINDIR correction in grub.d files, lost by mistake in a
    merge.  Noticed by Anthony Fok.
  * Don't fail on purge if the ucf association has already been taken over
    by a different grub package (closes: #574176).