@@ -1,31 +1,0 @@
-#!/bin/bash -e
-
-case "$1" in
-  configure)
-    tmpdir=`mktemp -d`
-    mkdir -p ${tmpdir}/boot/grub
-    cp /usr/share/doc/grub-common/examples/grub.cfg ${tmpdir}/boot/grub/
-    grub-mkrescue --output=/usr/lib/grub-rescue/grub-rescue-cdrom.iso ${tmpdir}
-    rm -rf ${tmpdir}
-
-    # Truth would be uselessly confusing for users.  Let's give 'em what they
-    # wanted instead.
-    for flavor in usb floppy ; do
-      rm -f /usr/lib/grub-rescue/grub-rescue-${flavor}.img
-      cp -l /usr/lib/grub-rescue/grub-rescue-{cdrom.iso,${flavor}.img}
-    done
-  ;;
-  abort-upgrade|abort-remove|abort-deconfigure)
-  ;;
-  *)
-    echo "postinst called with unknown argument \`$1'" >&2
-    exit 1
-  ;;
-esac
-
-# dh_installdeb will replace this with shell code automatically
-# generated by other debhelper scripts.
-
-#DEBHELPER#
-
-exit 0
