@@ -17,6 +17,15 @@ grub2 (1.98+20100602-1) UNRELEASED; urgency=low
     dependencies.  autogen.sh runs util/import_gcry.py after autoconf et al,
     so conf/gcry.rmk's timestamp will be later than some of the
     autogenerated outputs.
+  * Go back to shipping rescue images in the grub-rescue-pc .deb itself
+    rather than generating them in the postinst.  This means that (a) they
+    get removed when the package is removed (closes: #584176); (b) they are
+    listed in package metadata, as is proper for files in /usr (closes:
+    #584218); (c) grub-rescue-pc can potentially be used as a
+    build-dependency for other packages that need to build GRUB images into
+    installation media etc., without having to build-depend on grub-pc which
+    isn't coinstallable with other platform variants and does invasive
+    things in its postinst.
 
  -- Colin Watson <cjwatson@debian.org>  Tue, 01 Jun 2010 15:54:54 +0100
 
